# Raspberry-Pi-Pico-MacroPad

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  auto_set_url.cmake  example_auto_set_url.cmake  pico_sdk_import.cmake
.github/workflows/: codeql-analysis.yml  main.yml
ExternalLib/pimoroni-pico/: CMakeLists.txt  README.md  setting-up-micropython.md  setting-up-the-pico-sdk.md
ExternalLib/pimoroni-pico/drivers/: CMakeLists.txt
ExternalLib/pimoroni-pico/drivers/msa301/: msa301.cpp  msa301.hpp
ExternalLib/pimoroni-pico/drivers/st7789/: CMakeLists.txt  st7789.cpp  st7789.hpp
ExternalLib/pimoroni-pico/examples/: CMakeLists.txt
ExternalLib/pimoroni-pico/libraries/: CMakeLists.txt
ExternalLib/pimoroni-pico/libraries/pico_display/: README.md  pico_display.cpp  pico_display.hpp
ExternalLib/pimoroni-pico/libraries/pico_explorer/: pico_explorer.cpp  pico_explorer.hpp
ExternalLib/pimoroni-pico/libraries/pico_graphics/: font_data.cpp  pico_graphics.cpp  pico_graphics.hpp
ExternalLib/pimoroni-pico/libraries/pico_scroll/: pico_scroll.cpp  pico_scroll.hpp
ExternalLib/pimoroni-pico/libraries/pico_unicorn/: pico_unicorn.cpp  pico_unicorn.hpp
examples/: CMakeLists.txt
examples/Simple/: CMakeLists.txt  Main.cpp
pico_rgb_keypad/: CMakeLists.txt  Main-Code.cpp  Main-Code.h  Settings.cpp  Settings.h  usb_descriptors.c  usb_descriptors.h
src/: CMakeLists.txt  Main.cpp  RGBMacroLibrary.cpp  RGBMacroLibrary.hpp  usb_descriptors.c  usb_descriptors.h
